test-data/unit/check-function-always-true.test
[case testFunctionAlwaysTrue]
# flags: --python-version 3.6
def f(x: int) -> str: pass

if f: # E: Function f that has signature "Callable[[int], str]" could always be true in boolean context
    pass

[case testVariableAlwaysTrue2]
# flags: --python-version 3.6
def f(x: int) -> str: pass

my_var = f

if my_var:
    pass

[case testMethodAlwaysTrue]
# flags: --python-version 3.6
class User:
    def __init__(self, username):
        self.username = username

    def isUser(self, x: int) -> str: pass

user = User("Kenny")

if user.isUser: # E: Method "isUser" that has signature "Callable[[int], str]" could always be true in boolean context
    pass

[case testDirRefAlwaysTrue]
# flags: --python-version 3.6
class Sport:
    def __init__(self, sport):
        self.sport = sport
    def isSport(x: int) -> str: pass

sport = Sport("Soccer")

if sport.isSport: # E: Function "isSport" that has signature "Callable[[int], str]" could always be true in boolean context
    pass